# RTIP

./: .gitignore  13-Ca-OH-COCH2OH.xyz  18-glyceraldehyde.xyz  20-linear-pentose.xyz  Ca-OH-HCOCH2O.xyz  Ca-OH-OH-HOCH2CH2OH.xyz  HCO.xyz  LICENSE  README.md  README_ZH.md
HISTORY/: 20260524.md  README.md
JAX/: .gitignore  ASSUMPTIONS.md  DEEPMD_INTO.md  MIGRATION_IDWM.md  MIGRATION_OPTIMIZATION.md  MIGRATION_PATHWAY_HELPERS.md  MIGRATION_PLAN.md  MIGRATION_STAGE5_WORKFLOWS.md  MODULE_MAPPING.md  NUMERICAL_DIFFERENCES.md  README.md  TEST_STRATEGY.md  USAGE_ZH.md  USAGE_ZH.md.bak-job179  pyproject.toml  run_deepmd_rtip.slurm  run_deepmd_rtip.slurm.bak-job179  run_synthesis.slurm  (+3 more)
rtipmd/jax/: DEEPMD_INTO.md  DEEPMD_INTO_ZH.md  README.md  README_ZH.md  USAGE.md  USAGE_ZH.md  pyproject.toml
rtipmd/jax/src/rtip_jax/: _config.py  config.py  constants.py
rtipmd/jax/src/rtip_jax/core/: optimization.py
rtipmd/jax/src/rtip_jax/io/: __init__.py  pdb.py
rtipmd/jax/src/rtip_jax/math/: rotations.py
rtipmd/jax/src/rtip_jax/pes/: __init__.py  bias.py
rtipmd/jax/src/rtip_jax/workflows/: md.py
rtipmd/jax/tests/: test_bias_pes.py  test_constants_config.py  test_external_deepmd_provider.py  test_md_workflow.py  test_pathway_sampling_helpers.py  test_rotations.py  test_stage5_config_outputs_cli.py
rtipmd/rust/: Cargo.toml
rtipmd/rust/src/: lib.rs  lib_2mol.rs  lib_3mol.rs
rtipmd/rust/src/common/: constants.rs  error.rs  logo.rs  mod.rs
rtipmd/rust/src/io/: input.rs  mod.rs
rtipmd/rust/src/pes_exploration/: mod.rs  optimization.rs  potential.rs  rtip.rs  synthesis.rs
(+387 files in other folders)
